--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <h1>Vue.js</h1>
 
-  <p>is ready to start an adventure</p>
+  <p>poradnik programisty 1.2</p>
 
   <div id="app">
     <h2>Lista</h2>
