--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
   <h1>Vue.js</h1>
 
-  <p>poradnik programisty 1.3</p>
+  <p>poradnik programisty 1.2</p>
 
   <div id="app">
     <h2>Lista</h2>
     <ul>
       <!-- 2. Then, we're using built-in v-for directive to iterate over products -->
-      <li v-for="product in products">{{ product.name }}</li>
+      <li v-for="product in products"> {{ product.id }}. {{ product.name }} <button @click=removeProduct(product.id)>remove</button></li>
     </ul>
     <!-- 5. v-if can be helpful with conditional statements -->
     <p v-if="!products.length">No products!</p>
@@ -60,8 +60,11 @@
         },
         addProduct(mProduct) {
             this.products.push({
-                id: this.products[this.products.length - 1],
+                id: this.products[this.products.length - 1].id + 1,
                 name: mProduct });
+        },
+        removeProduct(idProduct) {
+            this.products = this.products.filter(product => product.id != idProduct);
         }
       }
     })
